; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_atmel_pwm.c_pwmcheck.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/misc/extr_atmel_pwm.c_pwmcheck.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.pwm_channel** }
%struct.pwm_channel = type { i32 }

@pwm = common dso_local global %struct.TYPE_2__* null, align 8
@ENODEV = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@PWM_NCHAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pwm_channel*)* @pwmcheck to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwmcheck(%struct.pwm_channel* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pwm_channel*, align 8
  %4 = alloca i32, align 4
  store %struct.pwm_channel* %0, %struct.pwm_channel** %3, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pwm, align 8
  %6 = icmp ne %struct.TYPE_2__* %5, null
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i32, i32* @ENODEV, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %2, align 4
  br label %41

10:                                               ; preds = %1
  %11 = load %struct.pwm_channel*, %struct.pwm_channel** %3, align 8
  %12 = icmp ne %struct.pwm_channel* %11, null
  br i1 %12, label %16, label %13

13:                                               ; preds = %10
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* %2, align 4
  br label %41

16:                                               ; preds = %10
  %17 = load %struct.pwm_channel*, %struct.pwm_channel** %3, align 8
  %18 = getelementptr inbounds %struct.pwm_channel, %struct.pwm_channel* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %36, label %22

22:                                               ; preds = %16
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @PWM_NCHAN, align 4
  %25 = icmp sge i32 %23, %24
  br i1 %25, label %36, label %26

26:                                               ; preds = %22
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pwm, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load %struct.pwm_channel**, %struct.pwm_channel*** %28, align 8
  %30 = load i32, i32* %4, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.pwm_channel*, %struct.pwm_channel** %29, i64 %31
  %33 = load %struct.pwm_channel*, %struct.pwm_channel** %32, align 8
  %34 = load %struct.pwm_channel*, %struct.pwm_channel** %3, align 8
  %35 = icmp ne %struct.pwm_channel* %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %26, %22, %16
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %2, align 4
  br label %41

39:                                               ; preds = %26
  %40 = load i32, i32* %4, align 4
  store i32 %40, i32* %2, align 4
  br label %41

41:                                               ; preds = %39, %36, %13, %7
  %42 = load i32, i32* %2, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
